[project]
name = "context_server"
version = "0.1.0"
description = "A Python context server for Zed"
authors = [
    { name = "Jason Mancuso", email = "7891333+jvmncs@users.noreply.github.com" },
]
dependencies = ["asyncio"]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["*_test"]
